test/fail_compilation/fail123.d
// 355 ICE from enum : nonexistent type

enum foo : type {
        blah1,
        blah2
}

enum foo2 : void { a, b }

